@@ -1,5 +1,8 @@
 EQEMu Changelog (Started on Sept 24, 2003 15:50)
 -------------------------------------------------------
+== 02/14/2015 ==
+Trevius: (RoF2) Bazaar is now partially functional.  RoF2 clients can start/end trader mode and other clients can purchase from them.  No other functionality yet.
+
 == 02/12/2015 ==
 Akkadius: Implement zone based gravity, required SQL DB change
 	- To test `zone` table `gravity` values, change the value and use #zheader <zoneshortname> to test
